# embody-codec

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codecheck.yml  codeql.yml  constraints.txt  continuous-integration.yml  release.yml  test.yml  tests.yml
src/embodycodec/: attributes.py  codec.py  crc.py  exceptions.py  file_codec.py  types.py
tests/: test_attribute.py  test_codec.py  test_crc.py  test_execute_command.py  test_file_codec.py  test_nack_messages.py
tests/unit/: test_attribute.py  test_codec.py  test_crc.py
