[metadata]
name = embodycodec
version = 0.0.1
author = espenwest
author_email = espenwest@gmail.com
description = Protocol codec for the Embody device
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker = https://aidee-health.atlassian.net/jira/software/projects/HBP
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
ignore = W503,E501,E203
exclude = tests
max-line-length = 120
import-order-style = pep8

[tool:pytest]
pythonpath = . src